--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<!-- Producto 1 -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="./anhcuacuongne/dior.jpg" alt="" />
+							<img src="dior.jpg" alt="" />
 						
 							<div class="button-group">
 								<span>
@@ -164,7 +164,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="./anhcuacuongne/coco.jpg"
+								src="coco.jpg"
 								alt="Cafe incafe-ingles.jpg"
 							/>
 							
@@ -199,7 +199,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="./anhcuacuongne/roja.jpg"
+								src="roja.jpg"
 								alt="Cafe Australiano"
 							/>
 							<div class="button-group">
@@ -232,7 +232,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="./anhcuacuongne/xerjoff.jpg" alt="Xerjoff EDP" />
+							<img src="xerjoff.jpg" alt="Xerjoff EDP" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
@@ -265,23 +265,23 @@
 
 			<section class="gallery">
 				<img
-					src="./anhcuacuongne/anh1.jpg"
+					src="anh1.jpg"
 					alt="Gallery Img1"
 					class="gallery-img-1"
 				/><img
-					src="./anhcuacuongne/anh2.jpg"
+					src="anh2.jpg"
 					alt="Gallery Img2"
 					class="gallery-img-2"
 				/><img
-					src="./anhcuacuongne/anh3.jpg"
+					src="anh3.jpg"
 					alt="Gallery Img3"
 					class="gallery-img-3"
 				/><img
-					src="./anhcuacuongne/anh4.jpg"
+					src="anh4.jpg"
 					alt="Gallery Img4"
 					class="gallery-img-4"
 				/><img
-					src="./anhcuacuongne/anh5.jpg"
+					src="anh5.jpg"
 					alt="Gallery Img5"
 					class="gallery-img-5"
 				/>
@@ -293,7 +293,7 @@
 					<!-- Producto 1 -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="./anhcuacuongne/dior.jpg" alt="Dior Sauvage EDP.jpg" />
+							<img src="dior.jpg" alt="Dior Sauvage EDP.jpg" />
 							<span class="discount">-13%</span>
 							<div class="button-group">
 								<span>
@@ -326,7 +326,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="./anhcuacuongne/coco.jpg"
+								src="coco.jpg"
 								alt="Chanel Coco EDP.jpg"
 							/>
 							<span class="discount">-22%</span>
@@ -360,7 +360,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="./anhcuacuongne/roja.jpg" alt="Roja Dove AAP" />
+							<img src="roja.jpg" alt="Roja Dove AAP" />
 							<span class="discount">-30%</span>
 							<div class="button-group">
 								<span>
@@ -392,7 +392,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="./anhcuacuongne/xerjoff.jpg" alt="Xerjoff EDP" />
+							<img src="xerjoff.jpg" alt="Xerjoff EDP" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
@@ -429,7 +429,7 @@
 				<div class="container-blogs">
 					<div class="card-blog">
 						<div class="container-img">
-							<img src="./anhcuacuongne/anh1.jpg" alt="Imagen Blog 1" />
+							<img src="anh1.jpg" alt="Imagen Blog 1" />
 							<div class="button-group-blog">
 								<span>
 									<i class="fa-solid fa-magnifying-glass"></i>
@@ -450,7 +450,7 @@
 					</div>
 					<div class="card-blog">
 						<div class="container-img">
-							<img src="./anhcuacuongne/anh2.jpg" alt="Imagen Blog 2" />
+							<img src="anh2.jpg" alt="Imagen Blog 2" />
 							<div class="button-group-blog">
 								<span>
 									<i class="fa-solid fa-magnifying-glass"></i>
@@ -471,7 +471,7 @@
 					</div>
 					<div class="card-blog">
 						<div class="container-img">
-							<img src="./anhcuacuongne/anh3.jpg" alt="Imagen Blog 3" />
+							<img src="anh3.jpg" alt="Imagen Blog 3" />
 							<div class="button-group-blog">
 								<span>
 									<i class="fa-solid fa-magnifying-glass"></i>
